RESOLVED FIXED281578
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-left-002.html
https://bugs.webkit.org/show_bug.cgi?id=281578
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycont...
alan
Reported 2024-10-16 08:34:10 PDT
ssia
Attachments
[fast-cq]Patch (1.65 KB, patch)
2024-10-16 08:37 PDT, alan
no flags
alan
Comment 1 2024-10-16 08:37:57 PDT
Created attachment 472953 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-17 05:34:24 PDT
Committed 285330@main (587614ba6978): <https://commits.webkit.org/285330@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472953 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-17 05:35:15 PDT
Note You need to log in before you can comment on or make changes to this bug.