[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-left-002.html https://bugs.webkit.org/show_bug.cgi?id=281578

Reviewed by Antti Koivisto.

Use the correct variable to decide whether we should apply the horizontal or vertical decoration values.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):

Canonical link: https://commits.webkit.org/285330@main